--- a/Inicio.html
+++ b/Inicio.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Inicio</title>
 </head>
 <body>
- 
+    <div class="sidebar">
+        <div class="logo">VehixControl</div>
+        <div class="menu">
+            <a href="#" class="active"><i class="fas fa-home"></i>Inicio</a>
+            <a href="Vehiculos.html"><i class="fas fa-car"></i>Vehiculos</a>
+        </div>
+    </div>
+
+    <div class="Contenido"> 
+        <h1>Contenido Principal</h1>
+        
+    </div>
 </body>
 <script src="JS/script.js"></script>
 </html>
