--- a/Inicio.html
+++ b/Inicio.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="CSS/inicio.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+
     <title>Inicio</title>
 </head>
 <body>
@@ -16,10 +19,14 @@
         </div>
     </div>
 
-    <div class="Contenido"> 
-        <h1>Contenido Principal</h1>
-        
-    </div>
+    <main class="Contenido"> 
+        <h2>Venta de Carros</h2>
+        <div id="cards-container" class="cards-grid">
+
+        </div>
+    </main>
+
+<script src="JS/inicio.js"></script>
+
 </body>
-<script src="JS/script.js"></script>
 </html>
