--- a/Inicio.html
+++ b/Inicio.html
@@ -7,18 +7,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="CSS/inicio.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
-
     <title>Inicio</title>
 </head>
 <body>
     <div class="sidebar">
         <div class="logo">VehixControl</div>
-        <div class="menu">
-            <a href="#" class="active"><i class="fas fa-home"></i>Inicio</a>
-            <a href="Vehiculos.html"><i class="fas fa-car"></i>Vehiculos</a>
-        </div>
-    </div>
-
+        <nav class="menu">
+          <a href="Inicio.html" class="active"><i class="fas fa-home"></i><span>Inicio</span></a>
+          <a href="Vehiculos.html"><i class="fas fa-car"></i><span>Vehículos</span></a>
+        </nav>
+      </div>
     <main class="Contenido"> 
         <h2>Venta de Carros</h2>
         <div id="cards-container" class="cards-grid">
