--- a/Vehiculos.html
+++ b/Vehiculos.html
@@ -47,6 +47,9 @@
           <label for="anio">Año:
             <input type="text" id="anio" required />
           </label>
+                 <label for="precio">Precio:
+            <input type="text" id="precio" required />
+          </label>
         <label for="imagen-file">Imagen:
           <input type="file" id="imagen-file" accept="image/*" />
         </label>
@@ -75,6 +78,7 @@
                     <th>Color</th>
                     <th>Placa</th>
                     <th>Año</th>
+                    <th>Precio</th>
                     <th>Imagen</th>
                     <th>Acciones</th>
                 </tr>
